--- a/pviewer5/MainWindow.xaml
+++ b/pviewer5/MainWindow.xaml
@@ -427,7 +427,8 @@
                        Grid.ColumnSpan="2"
                        Grid.Row="1"
                        Margin="5,5,5,5">
-                    <ComboBox ItemsSource="{Binding Source={StaticResource GUIUtilKey}, Path=Instance.ExceptionLevels}"  Text="{Binding Source={StaticResource GUIUtilKey}, Path=Instance.ExceptionLevelToShow, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                    <Label Content="Show Exceptions >= "/>
+                    <TextBox Text="{Binding Source={StaticResource GUIUtilKey}, Path=Instance.ExceptionLevelToShow, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
                     <CheckBox Name="displayaliascheckbox"
                           Content="Display Aliases"
                           IsChecked="{Binding Source={StaticResource GUIUtilKey}, Path=Instance.UseAliases, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
