--- a/pviewer5/MainWindow.xaml
+++ b/pviewer5/MainWindow.xaml
@@ -561,13 +561,13 @@
                         TextSearch.TextPath="name">
 
                         <DataGrid.Columns>
-                            <DataGridTextColumn Header="IP4 Address" IsReadOnly="True">
+                            <DataGridTextColumn Header="IP4 Address" IsReadOnly="True" SortMemberPath="addr">
                                 <DataGridTextColumn.Binding>
                                     <MultiBinding Converter="{StaticResource IP4mvconverternumberonly}" UpdateSourceTrigger="LostFocus" PresentationTraceSources.TraceLevel="High">
                                         <MultiBinding.ValidationRules>
                                             <local:ValidateIP4NonDup ValidationStep="RawProposedValue"/>
                                         </MultiBinding.ValidationRules>
-                                        <Binding Path="ip4" Mode="TwoWay"/>
+                                        <Binding Path="addr" Mode="TwoWay"/>
                                         <Binding Source="{StaticResource GUIUtilKey}" Path="Instance.Hex" Mode="TwoWay"/>
                                         <Binding Source="{StaticResource GUIUtilKey}" Path="Instance.UseAliases"/>
                                     </MultiBinding>
